--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-DB_HOST=dnd-game-db.postgres.database.azure.com
-DB_USER=JRMCHUGH@uncg.edu
-DB_PASSWORD=Grunghaven1
-DB_NAME=postgres
+DB_HOST=localhost
+DB_USER=postgres
+DB_PASSWORD=Avengers#1
+DB_NAME=dnd_game_db
 DB_PORT=5432
