--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "dev": "npm run start"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "concurrently": "^7.0.0",
     "cross-env": "^7.0.3",
     "electron": "^34.1.1",
     "electron-flask": "file:",
+    "electron-is-dev": "^3.0.1",
+    "pg": "^8.13.3",
+    "scrypt-js": "^3.0.1",
     "wait-on": "^8.0.2"
   }
 }
