--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,17 @@
     "@testing-library/user-event": "^13.5.0",
     "cross-env": "^7.0.3",
     "frontend": "file:",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^7.4.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "@babel/preset-react": "^7.14.5"
+  },
   "scripts": {
-    "start": "cross-env BROWSER=none react-scripts start",
+    "start": "cross-env BROWSER=none react-scripts start --watch-ignore C:\\DumpStack.log.tmp",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
