--- a/package.json
+++ b/package.json
@@ -20,8 +20,18 @@
     "electron-flask": "file:",
     "electron-is-dev": "^3.0.1",
     "pg": "^8.14.1",
-    "react-router-dom": "^7.4.0",
+    "process": "^0.11.10",
+    "react-router": "^7.4.0",
+    "react-router-dom": "^6.30.0",
     "scrypt-js": "^3.0.1",
-    "wait-on": "^8.0.2"
+    "sockjs-client": "^1.4.0",
+    "wait-on": "^8.0.2",
+    "web-vitals": "^4.2.4"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
+    "babel-loader": "^10.0.0"
   }
 }
