--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "concurrently": "^7.0.0",
-    "cross-env": "^7.0.3",
     "electron": "^34.1.1",
     "electron-flask": "file:",
     "electron-is-dev": "^3.0.1",
@@ -32,6 +31,7 @@
     "@babel/core": "^7.26.10",
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
-    "babel-loader": "^10.0.0"
+    "babel-loader": "^10.0.0",
+    "cross-env": "^7.0.3"
   }
 }
