--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,8 @@
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "express": "^4.21.2",
+    "mongoose": "^8.13.2",
+    "socket.io": "^4.8.1",
     "wait-on": "^6.0.1"
   }
 }
